[package]
name = "cold-cli"
version = "0.1.0"
edition = "2024"
description = "LAMCLOD AI coding agent CLI"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "cold"
path = "src/main.rs"

[dependencies]
cold-sdk = { path = "../cold-sdk" }
cold-context = { path = "../cold-context" }
cold-tools = { path = "../cold-tools" }
cold-agent-sdk = { path = "../cold-agent-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
